# settlrl-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.bot  README.md  mkdocs.yml  mypy_experiments.sh  pyproject.toml  pyrightconfig.json  run_benchmarks.sh  run_tests.sh  wt.sh
.benchmarks/Linux-CPython-3.12-64bit/: 0001_presync.json  0002_postsync.json
.github/workflows/: ci.yml  docs.yml
.secrets/: .env.example
docs/: index.md
docs/guides/: getting-started.md
docs/reference/: agents.md  app.md  engine.md  game.md  learn.md
docs/superpowers/specs/: 2026-06-23-arena-elo-design.md  2026-06-23-training-config-refactor-design.md
experiments/: CLAUDE.md  JOURNAL.md  README.md  _lib.py  _value_fitting.py  new.py
experiments/0001_bench_smoke/: report.md  run.py
experiments/0002_linear_value_fitting/: report.md  run.py  value_fitting.py
experiments/0002_sklearn_value_weights_vs_greedy/: report.md  run.py
experiments/0003_cem_value_weights_vs_greedy/: report.md  run.py
experiments/0003_neural_board_architectures/: data.py  features.py  models.py  report.md  road_probe.py  run.py  train.py
experiments/0004_alphazero/: report.md  run.py
experiments/0004_alphazero/conf/: config.yaml
experiments/0004_alphazero/conf/arena/: default.yaml  scale.yaml
experiments/0004_alphazero/conf/eval/: default.yaml
experiments/0004_alphazero/conf/experiment/: gnn.yaml  gnn_large.yaml  nano.yaml  (+9 more)
experiments/0005_neural_leaf/: data.py  report.md  run.py
experiments/tests/: conftest.py  test_smoke.py
src/catan_engine/: board.py
(+14 files in other folders)
