[project]
name = "catan-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MarkHaoxiang", email = "mark.haoxiang@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.7.1",
]

[project.scripts]
catan-engine = "catan_engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
